--- a/app/views/articles/show.html.haml
+++ b/app/views/articles/show.html.haml
@@ -29,7 +29,7 @@
             %div{class: "bg-white relative top-0 -mt-32 p-5 sm:p-10"}
               %h1{class: "text-stone-900 font-bold text-3xl mb-2"}
                 = @article.title
-              %blockquote{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-stone-300 p-4 shadow-md"}
+              %div{class: "text-base leading-8 my-5 text-stone-700 mb-4 text-2xl border-s-4 border-red-500 p-4 shadow-md"}
                 = @article.description
               
               -# AdSense block
