--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -102,36 +102,42 @@
 }
 
 blockquote{
-  font-size: 1.4em;
-  width:60%;
-  margin:50px auto;
-  font-family:Open Sans;
+  font-size: 1.1em;
+  width:90%;
+  margin:5px auto;
+  font-family:El Messiri;
   font-style:italic;
   color: rgba(239, 68, 68, 1);
-  padding:1.2em 30px 1.2em 75px;
-  border-left:8px solid #78C0A8 ;
-  line-height:1.6;
+  padding:1.1em 25px 1.1em 25px;
+  border-left:4px solid rgba(239, 68, 68, 1) ;
+  line-height:1.3;
   position: relative;
-  background:#EDEDED;
+  background:rgb(250, 245, 245, 1);
 }
 
 blockquote::before{
   font-family:Arial;
   content: "\201C";
   color:rgba(239, 68, 68, 1);
-  font-size:4em;
+  font-size:2em;
   position: absolute;
   left: 10px;
-  top:-10px;
+  top:-5px;
 }
 
 blockquote::after{
-  content: '';
+  font-family:Arial;
+  content: '\201E';
+  color:rgba(239, 68, 68, 1);
+  font-size:2em;
+  position: absolute;
+  left: 15px;
+  bottom:-5px;
 }
 
 blockquote span{
   display:block;
-  color:#333333;
+  color:rgba(239, 68, 68, 1);
   font-style: normal;
   font-weight: bold;
   margin-top:1em;
