--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -103,8 +103,8 @@
 
 blockquote{
   font-size: 1.1em;
-  width:90%;
-  margin:5px auto;
+  width:100%;
+  margin-top:5px auto;
   font-family:El Messiri;
   font-style:italic;
   color: rgba(239, 68, 68, 1);
